# uhmitest

./: CMakeLists.txt  README.md  build_debug.sh  build_debug_glstatic.sh  build_release.sh  default.nix  es2gears.c  es2gears.h  flake.nix  mk_package.sh  msg.h  uhmitest.c
app/: Android.mk  AndroidManifest.xml
app/java/tsaarni.nativeeglexample/: NativeEglExample.java
app/jni/: README_glad.txt  jniapi.cpp  jniapi.h  renderer.cpp  renderer.h
app/res/layout/: main.xml
es2gears/: Android.mk  CMakeLists.txt  es2gears.c  es2gears.h
libuhmigl/: Android.mk  CMakeLists.txt  animated_pointer.h  drm_state.c  drm_state.h  egl_helpers.c  egl_helpers.h  libuhmigl.c  libuhmigl.h.in  libuhmigl.pc.in  libuhmigl_android.c  loader.c  loader.h  loader_android.c  pr.c  pr.h  rproxy_properties.c
libuhmigl/include/glad/: egl.h  gles2.h
libuhmigl/include_android/: libuhmigl.h
libuhmigl/src/: egl.c
uhmitest/: Android.mk  CMakeLists.txt  timeval.h  uhmitest.c
